...
            Center(
              child: ElevatedButton(
                key: Keys.scrollerButton,
                  onPressed: () {
                    context.go("/scroller");
                  },
                  child: const Text('Scroller')),
            ),
            Center(
              child: ElevatedButton(
                  onPressed: () {
                    context.go("/captcha");
                  },
...
            ),
            Center(
              child: ElevatedButton(
                  onPressed: () {
                    context.go("/slide-up");
                  },
                  child: const Text('Slide Up')),
            ),
            Center(
              child: ElevatedButton(
                  onPressed: () {
                    context.go("/verify-user-wallet");
                  },
...
